# kyoyu

./: .gitignore  Cargo.toml  README.md  build.gradle  gradle.properties  settings.gradle  settings.json  stonecutter.gradle
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  gradle.yml  matrix_prep.yml  release.yml  update_modrinth_readme.yml
.github/workflows/scripts/: matrix.py  (+2 more)
buildSrc/: build.gradle
docs/: config.md
kyoyu-server/: Cargo.toml
kyoyu-server/src/: client.rs  config.rs  connection.rs  lib.rs  main.rs  packet.rs  player.rs  server.rs
kyoyu-server/src/packet/: auth.rs
versions/fabric-1.14.4/: gradle.properties
versions/fabric-1.15.2/: gradle.properties
versions/fabric-1.16.5/: gradle.properties
versions/fabric-1.17.1/: gradle.properties
versions/fabric-1.18.2/: gradle.properties
versions/fabric-1.19.2/: gradle.properties
versions/fabric-1.19.4/: gradle.properties
versions/fabric-1.20.1/: gradle.properties
versions/fabric-1.20.2/: gradle.properties
versions/fabric-1.20.4/: gradle.properties
versions/fabric-1.20.6/: gradle.properties
versions/fabric-1.21.1/: gradle.properties
versions/fabric-1.21.3/: gradle.properties
versions/fabric-1.21.4/: gradle.properties
versions/forge-1.14.4/: gradle.properties
versions/forge-1.15.2/: gradle.properties
versions/forge-1.16.5/: gradle.properties
versions/forge-1.17.1/: gradle.properties
versions/forge-1.18.2/: gradle.properties
versions/forge-1.19.2/: gradle.properties
versions/forge-1.19.4/: gradle.properties
versions/forge-1.20.1/: gradle.properties
(+73 files in other folders)
