[package]
name = "kyoyu-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

